--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "jquery": "^3.5.0",
+    "jsdom": "^16.2.2",
     "@babel/core": "^7.9.0",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
